# pico-sdcard-bootloader

./: .gitmodules  CMakeLists.txt  CMakePresets.json  NOTICE.md  README.md  build.sh  config.cmake
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt
src/boot2/: CMakeLists.txt
src/boot2/boot2_helpers/: exit_from_boot2.S
src/boot3/: CMakeLists.txt  diag.c  diag.h  flash.c  flash.h  interval_set.c  interval_set.h  main.c  memmap.ld  prog.c  prog.h  transport.c  transport.h  vector_into_flash.S  vector_table.c  vector_table.h
test/: CMakeLists.txt  test_interval_set.cpp  test_prog.cpp
